project_backup_v2.3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mikrotik-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - api.mikrotik.manager
    secretName: mikrotik-tls
  rules:
  - host: api.mikrotik.manager
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mikrotik-api-service
            port:
              number: 80
